--- a/styles/components/prefooter.css
+++ b/styles/components/prefooter.css
@@ -1,7 +1,7 @@
 .pf-wrapper {
   display: flex;
   justify-content: flex-start;
-  margin: 60px 10px;
+  margin: 80px 10px;
 }
 
 .pf-index {
